--- a/src/components/Navbar/MyNavbar.css
+++ b/src/components/Navbar/MyNavbar.css
@@ -1,5 +1,5 @@
 .NavbarItems {
-  background: linear-gradient(90deg, var(--white) 0%, #fEfefe 100%);
+  background: linear-gradient(90deg, var(--white) 0%, #fefefe 100%);
   height: 120px;
   display: flex;
   justify-content: center;
@@ -13,7 +13,7 @@
 .navbar-logo {
   width: 250px;
   justify-self: start;
-  margin-left: 20px;
+  margin-left: 1.5rem;
   cursor: pointer;
 }
 
@@ -65,17 +65,15 @@
   display: inline-flex;
 }
 
-<<<<<<< HEAD
-@media screen and (max-width: 1225px) {
-=======
-@media screen and (max-width: 1175px) {
-  .fa-caret-down {
-    display: none;
-  }
-
->>>>>>> 80b13181b4b1c1b5fcaa88171c491ebf91cb3986
+@media screen and (max-width: 1200px) {
   .NavbarItems {
     position: relative;
+  }
+
+  .nav-item {
+    text-align: center;
+    justify-content: center;
+    align-items: center;
   }
 
   .navbar-logo {
@@ -97,7 +95,8 @@
   }
 
   .nav-menu.active {
-    background: linear-gradient(90deg, var(--white) 0%, #fEfefe 100%);    left: 0;
+    background: linear-gradient(90deg, var(--white) 0%, #fefefe 100%);
+    left: 0;
     opacity: 1;
     transition: all 0.5s ease;
     z-index: 1;
