--- a/src/components/SignupForm/Form.css
+++ b/src/components/SignupForm/Form.css
@@ -1,10 +1,6 @@
 .signupform-container {
   margin: 5rem auto;
-<<<<<<< HEAD
   width: 1525px;
-=======
-  width: 1500px;
->>>>>>> 80b13181b4b1c1b5fcaa88171c491ebf91cb3986
   box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.2), 0 7px 20px 0 rgba(0, 0, 0, 0.2);
   position: relative;
   border-radius: 3px;
